syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc DayTime (DayTimeRequest) returns (DayTimeReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message DayTimeRequest {
}
message DayTimeReply {
  string message = 1;
}